--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar fixed-top navbar-expand-md flex-nowrap navbar-new-top">
     <a href="/" class="navbar-brand">
-        <img src="../../assets/logo.png" alt="logo"/>
+        <img src="../../assets/logo.png" alt="logo" />
     </a>
     <ul class="nav navbar-nav mr-auto"></ul>
     <ul class="navbar-nav flex-row">
-        <li class="nav-item">
-            <mat-icon class="shopping-cart-icon" matBadge="15" matBadgeColor="warn">shopping_cart</mat-icon>
+        <li class="nav-item" [routerLink]="['/product/checkout']">
+            <mat-icon class="shopping-cart-icon" matBadge="{{cartService.entries()}}" matBadgeColor="warn">shopping_cart
+            </mat-icon>
         </li>
     </ul>
 </nav>
@@ -13,10 +14,10 @@
     <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
         <ul class="navbar-nav w-100 justify-content-center px-3">
             <li class="nav-item">
-                <a class="nav-link">Men</a>
+                <a class="nav-link" routerLink="/product/men" routerLinkActive="is-active">Men</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Women</a>
+                <a class="nav-link" routerLink="/product/women" routerLinkActive="is-active">Women</a>
             </li>
         </ul>
     </div>
