--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/scss/bootstrap.scss";
+@import "./assets/scss/variable";
+
+html * {
+    font-family: $primary-color;
+}
 
 // overwrite css
-.table thead th { border-bottom: none; }
+.table thead th {
+    border-bottom: none;
+}
